--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ app.auth.jwt-jks-alias=${JKS_ALIAS:myportfolio}
 app.auth.web-client-id=${WEB_ID:portfolio-web}
 app.auth.web-client-secret=${WEB_SECRET:portweb123}
 app.auth.web-redirect-uri=${WEB_REDIRECT:http://127.0.0.1:8080/authorized}
+
+# app cors properties
+app.cors.allowed-origins=http://localhost:5173, http://127.0.0.1:5173
