--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,10 @@ app.auth.jwt-jks-password=${JKS_PASSWORD:123456}
 app.auth.jwt-jks-alias=${JKS_ALIAS:myportfolio}
 app.auth.web-client-id=${WEB_ID:portfolio-web}
 app.auth.web-client-secret=${WEB_SECRET:portweb123}
-app.auth.web-redirect-uri=${WEB_REDIRECT:http://127.0.0.1:8080/authorized}
+app.auth.web-redirect-uri=${WEB_REDIRECT:http://127.0.0.1:5173/login/authorized}
+
+# resource server
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8082/oauth2/jwks
 
 # app cors properties
 app.cors.allowed-origins=http://localhost:5173, http://127.0.0.1:5173
